# discord-music-bot-cpp

./: .gitignore  CMakeLists.txt  README.md  audio_streamer.cpp  audio_streamer.h  conanfile.txt  config.example.json  config_manager.cpp  config_manager.h  extractor.cpp  extractor.h  main.cpp  queue_manager.h  requirements.txt
